--- a/impressao/painel.html
+++ b/impressao/painel.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Impressão - Setor de Arte</title>
     <link rel="icon" type="image/svg+xml" href="https://setordearte.com.br/images/logo-redonda.svg">
-    <!-- O caminho para o style.css precisa voltar um nível -->
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -26,7 +25,6 @@
             <div class="kanban-header">
                 <h1>Painel de Impressão</h1>
                 <div class="filtros-pedidos">
-                    <!-- Filtros podem ser estilizados ou mantidos. O CSS global já os cobre. -->
                     <select id="impressora-filter">
                         <option value="">Todas as Impressoras</option>
                         <!-- Opções serão adicionadas via JS -->
@@ -35,79 +33,53 @@
                         <option value="">Todos os Materiais</option>
                         <!-- Opções serão adicionadas via JS -->
                     </select>
-                    <button id="btn-filtrar" class="btn-acao">Filtrar</button>
+                    <button id="btn-filtrar">Filtrar</button>
                 </div>
             </div>
 
             <div class="kanban-board">
                 <!-- Colunas de Prazo com as novas classes de status para cores -->
-                <div class="kanban-column status-perdido" data-column-id="ATRASADO">
+                <div class="kanban-column status-atrasado" data-column-id="ATRASADO">
                     <div class="column-header">
                         <span class="column-title">ATRASADO</span>
-                        <span class="column-total" id="total-ATRASADO">R$0</span>
-                        <button class="add-card-btn" title="Adicionar Negócio">+</button>
                     </div>
                     <div class="column-cards" id="cards-ATRASADO">
                         
                         <!-- CARD DE EXEMPLO - Use esta estrutura para criar os cards dinamicamente -->
-                        <div class="kanban-card" data-card-id="12345">
-                            <div class="card-header-info">
-                                <span class="card-title">TESTE (ignorem)</span>
-                                <!-- Badge de notificação (opcional) -->
-                                <span class="card-notification-badge">2</span>
-                            </div>
-                            <div class="card-value">R$31,50</div>
-                            <a href="#" class="card-company">VISIVA - GRÁFICA E COMUNICAÇÃO VISUAL</a>
-                            <div class="card-date">hoje, 09:03</div>
-                            <div class="card-footer">
-                                <div class="card-responsible">
-                                    <img src="https://i.pravatar.cc/28?u=dior" alt="Dior">
-                                    <span>Dior</span>
-                                </div>
-                                <div class="card-icons">
-                                    <i class="fa-solid fa-phone"></i>
-                                    <i class="fa-solid fa-envelope"></i>
-                                    <i class="fa-solid fa-comment"></i>
-                                </div>
-                            </div>
+                        <div class="kanban-card" data-deal-id-card="55777-2992">
+                            <div class="card-id">#55777 - 2992</div>
+                            <div class="card-client-name">Luciene</div>
+                            <button class="btn-detalhes" data-action="open-details-modal" data-deal-id="12345">Detalhes</button>
                         </div>
                         <!-- Fim do Card de Exemplo -->
 
                     </div>
                 </div>
                 
-                <div class="kanban-column status-negociacao" data-column-id="HOJE">
+                <div class="kanban-column status-hoje" data-column-id="HOJE">
                     <div class="column-header">
                         <span class="column-title">HOJE</span>
-                        <span class="column-total" id="total-HOJE">R$0</span>
-                        <button class="add-card-btn" title="Adicionar Negócio">+</button>
                     </div>
                     <div class="column-cards" id="cards-HOJE"></div>
                 </div>
 
-                <div class="kanban-column status-contrato" data-column-id="ESSA_SEMANA">
+                <div class="kanban-column status-esta-semana" data-column-id="ESSA_SEMANA">
                     <div class="column-header">
-                        <span class="column-title">ESTA SEMANA</span>
-                        <span class="column-total" id="total-ESSA_SEMANA">R$0</span>
-                        <button class="add-card-btn" title="Adicionar Negócio">+</button>
+                        <span class="column-title">ESTA<br>SEMANA</span>
                     </div>
                     <div class="column-cards" id="cards-ESSA_SEMANA"></div>
                 </div>
 
-                <div class="kanban-column status-producao" data-column-id="PROXIMA_SEMANA">
+                <div class="kanban-column status-proxima-semana" data-column-id="PROXIMA_SEMANA">
                     <div class="column-header">
-                        <span class="column-title">PRÓXIMA SEMANA</span>
-                        <span class="column-total" id="total-PROXIMA_SEMANA">R$0</span>
-                        <button class="add-card-btn" title="Adicionar Negócio">+</button>
+                        <span class="column-title">PRÓXIMA<br>SEMANA</span>
                     </div>
                     <div class="column-cards" id="cards-PROXIMA_SEMANA"></div>
                 </div>
 
-                <div class="kanban-column status-sem-etapa" data-column-id="SEM_DATA">
+                <div class="kanban-column status-sem-data" data-column-id="SEM_DATA">
                     <div class="column-header">
-                        <span class="column-title">SEM DATA</span>
-                        <span class="column-total" id="total-SEM_DATA">R$0</span>
-                        <button class="add-card-btn" title="Adicionar Negócio">+</button>
+                        <span class="column-title">SEM<br>DATA</span>
                     </div>
                     <div class="column-cards" id="cards-SEM_DATA"></div>
                 </div>
@@ -118,7 +90,7 @@
     <!-- O script agora aponta para o novo arquivo dentro desta pasta -->
     <script src="painel-script.js"></script>
 
-    <!-- MODAL DE DETALHES RÁPIDOS DO PEDIDO (estrutura inalterada) -->
+    <!-- MODAL DE DETALHES RÁPIDOS DO PEDIDO -->
     <div class="modal-overlay" id="modal-detalhes-rapidos">
         <div class="modal-content modal-lg">
             <div class="modal-header">
