--- a/designer/painel.html
+++ b/designer/painel.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Painel do Designer - Setor de Arte</title>
     <link rel="icon" type="image/svg+xml" href="https://setordearte.com.br/images/logo-redonda.svg">
-    <link rel="stylesheet" href="../style.css">
+    <!-- O caminho para o style.css pode precisar de ajuste dependendo da sua estrutura de pastas -->
+    <link rel="stylesheet" href="../style.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -25,7 +26,7 @@
         <main class="main-painel">
             <div class="container">
 
-                <!-- Cards de Resumo -->
+                <!-- Cards de Resumo (Intocados, conforme solicitado) -->
                 <div class="dashboard-grid">
                     <div class="dash-card">
                         <div class="card-header">
@@ -53,8 +54,8 @@
                     </div>
                 </div>
 
-                <!-- Sistema de Abas -->
-                <div class="tabs-container">
+                <!-- Sistema de Abas com o padrão global -->
+                <div class="tabs-component">
                     <div class="tab-buttons">
                         <button class="tab-btn active" data-tab="atendimentos">Meus Atendimentos</button>
                         <button class="tab-btn" data-tab="saques">Histórico de Saques</button>
@@ -62,7 +63,7 @@
                     <div class="tab-content">
                         <!-- Conteúdo da Aba 1: Atendimentos -->
                         <div id="atendimentos" class="tab-pane active">
-                            <div class="pedidos-list-header">
+                            <div class="pedidos-list-header" style="grid-template-columns: 1fr 4fr 2fr 1.5fr 1.5fr;">
                                 <div class="col-id">ID</div>
                                 <div class="col-titulo">Título</div>
                                 <div class="col-status">Status</div>
@@ -75,7 +76,7 @@
                         </div>
                         <!-- Conteúdo da Aba 2: Saques -->
                         <div id="saques" class="tab-pane">
-                             <div class="pedidos-list-header">
+                             <div class="pedidos-list-header" style="grid-template-columns: 1fr 4fr 2fr 1.5fr;">
                                 <div class="col-id">ID</div>
                                 <div class="col-titulo">Título</div>
                                 <div class="col-status">Status</div>
