--- a/acabamento/acabamento.html
+++ b/acabamento/acabamento.html
@@ -55,21 +55,21 @@
 
                 <div class="kanban-column status-esta-semana" data-column-id="ESSA_SEMANA">
                     <div class="column-header">
-                        <span class="column-title">ESTA<br>SEMANA</span>
+                        <span class="column-title">ESTA SEMANA</span>
                     </div>
                     <div class="column-cards" id="cards-ESSA_SEMANA"></div>
                 </div>
 
                 <div class="kanban-column status-proxima-semana" data-column-id="PROXIMA_SEMANA">
                     <div class="column-header">
-                        <span class="column-title">PRÓXIMA<br>SEMANA</span>
+                        <span class="column-title">PRÓXIMA SEMANA</span>
                     </div>
                     <div class="column-cards" id="cards-PROXIMA_SEMANA"></div>
                 </div>
 
                 <div class="kanban-column status-sem-data" data-column-id="SEM_DATA">
                     <div class="column-header">
-                        <span class="column-title">SEM<br>DATA</span>
+                        <span class="column-title">SEM DATA</span>
                     </div>
                     <div class="column-cards" id="cards-SEM_DATA"></div>
                 </div>
