--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
     </div>
     
     <!-- Marcador que será substituído pelo footer.html (se você tiver um) -->
-    <!-- <div id="footer-placeholder"></div> -->
+    <div id="footer-placeholder"></div>
 
     <!-- Carrega o nosso novo script de layout -->
     <script src="/layout.js"></script>
