--- a/painel.html
+++ b/painel.html
@@ -64,7 +64,7 @@
                             <div class="tab-content">
                                  <div class="tab-pane active">
     
-                                    <div class="pedidos-list-header" style="grid-template-columns: 1fr 4fr 1.5fr 1.5fr 1.5fr;">
+                                    <div class="pedidos-list-header">
                                         <div class="col-id">ID</div>
                                         <div class="col-titulo">Título</div>
                                         <div class="col-status">Status</div>
