--- a/assinatura.html
+++ b/assinatura.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Finalizar Assinatura</title>
+    <title>Findalizar Assinatura</title>
 </head>
 <body>
     <h1>Página de Assinatura</h1>
