--- a/designer/perfil.html
+++ b/designer/perfil.html
@@ -11,7 +11,7 @@
     <div class="app-layout">
         <header class="app-header">
             <div class="container header-content">
-                <a href="painel.html"><img src="https://setordearte.com.br/images/logo-redonda.svg" alt="Logo Setor de Arte" class="app-logo"></a>
+                <a href="painel.html"><img src="" alt="Logo Setor de Arte" class="app-logo"></a>
                 <div class="user-menu">
                     <span id="designer-greeting">Carregando...</span>
                     <button id="logout-button">Sair</button>
