--- a/cadastrar-empresa.html
+++ b/cadastrar-empresa.html
@@ -1,45 +1,46 @@
-<!-- testes/cadastrar-empresa.html -->
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Empresas</title>
-    <!-- Você pode adicionar seu arquivo de CSS aqui se quiser -->
+    <title>Cadastro de Nova Empresa</title>
+    <!-- Você pode adicionar seu arquivo de CSS aqui -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <style>
+        /* Estilos básicos para o formulário */
+        body { font-family: sans-serif; padding: 20px; }
+        form { display: flex; flex-direction: column; max-width: 500px; gap: 15px; }
+        input { padding: 10px; border: 1px solid #ccc; border-radius: 4px; }
+        button { padding: 12px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer; }
+        button:disabled { background-color: #aaa; }
+        #mensagem { margin-top: 15px; padding: 10px; border-radius: 4px; }
+        .sucesso { background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
+        .erro { background-color: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+    </style>
 </head>
 <body>
 
-    <h1>Cadastrar Nova Empresa</h1>
-    
+    <h1>Cadastro de Nova Empresa</h1>
+
     <form id="form-cadastro-empresa">
-        <div>
-            <label for="cnpj">CNPJ:</label>
-            <input id="cnpj" type="text" required>
-        </div>
-        <br>
-        <div>
-            <label for="nomeFantasia">Nome Fantasia:</label>
-            <input id="nomeFantasia" type="text" required>
-        </div>
-        <br>
-        <div>
-            <label for="logo">URL do Logo:</label>
-            <input id="logo" type="text">
-        </div>
-        <br>
-        <div>
-            <label for="whatsapp">WhatsApp:</label>
-            <input id="whatsapp" type="text">
-        </div>
-        <br>
-        <button type="submit">Cadastrar</button>
+        <label for="cnpj">CNPJ:</label>
+        <input type="text" id="cnpj" name="cnpj" placeholder="00.000.000/0001-00" required>
+
+        <label for="nome_fantasia">Nome Fantasia:</label>
+        <input type="text" id="nome_fantasia" name="nome_fantasia" required>
+
+        <label for="logo">URL do Logo (Opcional):</label>
+        <input type="url" id="logo" name="logo" placeholder="https://exemplo.com/logo.png">
+
+        <label for="whatsapp">WhatsApp (Opcional):</label>
+        <input type="tel" id="whatsapp" name="whatsapp" placeholder="(99) 99999-9999">
+
+        <button type="submit" id="btn-cadastrar">Cadastrar</button>
     </form>
 
-    <p id="mensagem"></p> <!-- Elemento para exibir mensagens de sucesso ou erro -->
+    <div id="mensagem" style="display: none;"></div>
 
-    <!-- Importando o script que vai cuidar da lógica do formulário -->
+    <!-- Link para o nosso script JavaScript -->
     <script src="cadastrar-empresa-script.js"></script>
-
 </body>
 </html>
