--- a/cadastrar-empresa.html
+++ b/cadastrar-empresa.html
@@ -29,8 +29,8 @@
         <label for="nome_fantasia">Nome Fantasia:</label>
         <input type="text" id="nome_fantasia" name="nome_fantasia" required>
 
-        <label for="logo">URL do Logo (Opcional):</label>
-        <input type="url" id="logo" name="logo" placeholder="https://exemplo.com/logo.png">
+        <label for="logo">ID do Logo (Opcional):</label>
+        <input type="number" id="logo" name="logo" placeholder="123456">
 
         <label for="whatsapp">WhatsApp (Opcional):</label>
         <input type="tel" id="whatsapp" name="whatsapp" placeholder="(99) 99999-9999">
