--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Login - Setor de Arte</title>
     <link rel="icon" type="image/svg+xml" href="https://setordearte.com.br/images/logo-redonda.svg">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -24,14 +23,12 @@
                 <button type="submit" class="btn-submit">Entrar</button>
             </form>
             <div class="auth-footer">
-    <p><a href="esqueci-senha" class="forgot-password-link">Esqueceu sua senha?</a></p>
-    <p>N達o tem uma conta? <a href="cadastro">Crie uma agora</a></p>
-</div>
+                <p><a href="esqueci-senha.html" class="forgot-password-link">Esqueceu sua senha?</a></p>
+                <p>Não tem uma conta? <a href="cadastro.html">Crie uma agora</a></p>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
     <script src="bitrix24-widget.js"></script>
-    
 </body>
 </html>
-
