--- a/designer/solicitar-saque.html
+++ b/designer/solicitar-saque.html
@@ -11,7 +11,7 @@
     <div class="app-layout">
         <header class="app-header">
             <div class="container header-content">
-                 <img src="https://setordearte.com.br/images/logo-redonda.svg" alt="Logo Setor de Arte" class="app-logo">
+                 <img src="https://app.setordearte.com.br/images/logo-fundo-claro-100x100.png" alt="Logo Setor de Arte" class="app-logo">
                  <a href="painel.html" style="color: white; text-decoration: none;">Voltar ao Painel</a>
             </div>
         </header>
