--- a/designer/painel.html
+++ b/designer/painel.html
@@ -12,7 +12,7 @@
     <div class="app-layout">
         <header class="app-header">
             <div class="container header-content">
-                 <img src="https://setordearte.com.br/images/logo-redonda.svg" alt="Logo Setor de Arte" class="app-logo">
+                 <img src="https://app.setordearte.com.br/images/logo-fundo-claro-100x100.png" alt="Logo Setor de Arte" class="app-logo">
                 <div class="user-menu">
                     <a href="perfil.html" id="designer-greeting-link" style="text-decoration: none;">
                         <span id="designer-greeting"></span>
