--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -29,7 +29,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="valor-designer">Valor para o Designer (R$)</label>
-                                <input type="number" id="valor-designer" min="35" step="5" required>
+                                <input type="number" id="valor-designer" step="5" required>
                             </div>
                         </div>
 
