--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -1,3 +1,5 @@
+--- START OF FILE criar-pedido-grafica.html ---
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -30,6 +32,18 @@
                             <div class="form-group">
                                 <label for="valor-designer">Valor para o Designer (R$)</label>
                                 <input type="number" id="valor-designer" step="5" required>
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="pedido-servico">Serviço</label>
+                                <select id="pedido-servico" required>
+                                    <option value="" disabled selected>Selecione o tipo de serviço</option>
+                                    <option value="Arte Impressão">Arte Impressão</option>
+                                    <option value="Arte Digital">Arte Digital</option>
+                                    <option value="Edição de Vídeo">Edição de Vídeo</option>
+                                </select>
                             </div>
                         </div>
 
@@ -88,3 +102,4 @@
 
 </body>
 </html>
+--- END OF FILE criar-pedido-grafica.html ---
