--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -9,18 +9,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         .help-tooltip {
-            display: inline-block;
-            margin-left: 5px;
-            cursor: help;
-            color: #6c757d;
-            border: 1px solid #ced4da;
-            border-radius: 50%;
-            width: 18px;
-            height: 18px;
-            text-align: center;
-            line-height: 16px;
-            font-weight: bold;
+            display: inline-block; margin-left: 5px; cursor: help; color: #6c757d; border: 1px solid #ced4da;
+            border-radius: 50%; width: 18px; height: 18px; text-align: center; line-height: 16px; font-weight: bold;
         }
+
+        /* --- NOVOS ESTILOS PARA OS BOTÕES DE RÁDIO --- */
+        .radio-group {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 5px;
+        }
+        .radio-option input[type="radio"] {
+            display: none; /* Esconde o rádio padrão */
+        }
+        .radio-option label {
+            display: inline-block;
+            padding: 10px 18px;
+            border: 1px solid #ced4da;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+            background-color: #f8f9fa;
+            font-weight: 500;
+        }
+        .radio-option input[type="radio"]:checked + label {
+            background-color: var(--azul-principal);
+            color: white;
+            border-color: var(--azul-principal);
+            box-shadow: 0 2px 8px rgba(56, 169, 244, 0.3);
+        }
+        .radio-option label:hover {
+            border-color: #adb5bd;
+        }
+        /* --- FIM DOS NOVOS ESTILOS --- */
     </style>
 </head>
 <body>
@@ -37,7 +59,6 @@
                         <h2 style="margin-top:0;">Criar Pedido para Gráfica</h2>
                         <div id="pedido-form-feedback" class="form-feedback hidden"></div>
 
-                        <!-- Linha 1: ID, Nome Cliente, WPP Cliente -->
                         <div class="form-row" style="grid-template-columns: 1fr 2fr 2fr;">
                             <div class="form-group">
                                 <label for="pedido-id">ID do Pedido</label>
@@ -53,111 +74,70 @@
                             </div>
                         </div>
                         
-                        <!-- Linha 2: Dropdowns de Arte e Tipo de Entrega -->
-                        <div class="form-row" style="grid-template-columns: 1fr 1fr;">
-                            <div class="form-group">
-                                <label for="pedido-arte">Arte</label>
-                                <select id="pedido-arte" required>
-                                    <option value="" disabled selected>Selecione a origem da arte</option>
-                                    <option value="Arquivo do Cliente">Arquivo do Cliente</option>
-                                    <option value="Setor de Arte">Setor de Arte</option>
-                                    <option value="Designer Próprio">Designer Próprio</option>
-                                </select>
-                            </div>
-                            <!-- NOVO CAMPO ADICIONADO AQUI -->
-                            <div class="form-group">
-                                <label for="tipo-entrega">Tipo de Entrega</label>
-                                <select id="tipo-entrega" required>
-                                    <option value="" disabled selected>Selecione a entrega</option>
-                                    <option value="RETIRADA NO BALCÃO">RETIRADA NO BALCÃO</option>
-                                    <option value="INSTALAÇÃO NA LOJA">INSTALAÇÃO NA LOJA</option>
-                                    <option value="INSTALAÇÃO EXTERNA">INSTALAÇÃO EXTERNA</option>
-                                    <option value="DIGITAL">DIGITAL</option>
-                                    <option value="ENVIO">ENVIO</option>
-                                </select>
+                        <!-- SEÇÃO "ARTE" ATUALIZADA PARA RADIO BUTTONS -->
+                        <div class="form-group">
+                            <label>Arte</label>
+                            <div class="radio-group" id="pedido-arte-container">
+                                <div class="radio-option">
+                                    <input type="radio" id="arte-arquivo" name="pedido-arte" value="Arquivo do Cliente" required>
+                                    <label for="arte-arquivo">Arquivo do Cliente</label>
+                                </div>
+                                <div class="radio-option">
+                                    <input type="radio" id="arte-setor" name="pedido-arte" value="Setor de Arte">
+                                    <label for="arte-setor">Setor de Arte</label>
+                                </div>
+                                <div class="radio-option">
+                                    <input type="radio" id="arte-proprio" name="pedido-arte" value="Designer Próprio">
+                                    <label for="arte-proprio">Designer Próprio</label>
+                                </div>
                             </div>
                         </div>
 
-                        <!-- Campos para "Arquivo do Cliente" -->
+                        <!-- SEÇÃO "TIPO DE ENTREGA" ATUALIZADA PARA RADIO BUTTONS -->
+                        <div class="form-group" style="margin-top: 20px;">
+                            <label>Tipo de Entrega</label>
+                            <div class="radio-group">
+                                <div class="radio-option">
+                                    <input type="radio" id="entrega-balcao" name="tipo-entrega" value="RETIRADA NO BALCÃO" required>
+                                    <label for="entrega-balcao">Retirada no Balcão</label>
+                                </div>
+                                <div class="radio-option">
+                                    <input type="radio" id="entrega-loja" name="tipo-entrega" value="INSTALAÇÃO NA LOJA">
+                                    <label for="entrega-loja">Instalação na Loja</label>
+                                </div>
+                                <div class="radio-option">
+                                    <input type="radio" id="entrega-externa" name="tipo-entrega" value="INSTALAÇÃO EXTERNA">
+                                    <label for="entrega-externa">Instalação Externa</label>
+                                </div>
+                                <div class="radio-option">
+                                    <input type="radio" id="entrega-digital" name="tipo-entrega" value="DIGITAL">
+                                    <label for="entrega-digital">Digital</label>
+                                </div>
+                                 <div class="radio-option">
+                                    <input type="radio" id="entrega-envio" name="tipo-entrega" value="ENVIO">
+                                    <label for="entrega-envio">Envio</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- O restante do formulário permanece o mesmo -->
+
                         <div id="arquivo-cliente-fields" class="hidden">
-                            <div class="form-row">
-                                <div class="form-group">
-                                    <label for="link-arquivo">Link do Arquivo para Impressão</label>
-                                    <input type="url" id="link-arquivo" placeholder="https://exemplo.com/arquivo.pdf">
-                                </div>
-                            </div>
+                            <div class="form-row"><div class="form-group"><label for="link-arquivo">Link do Arquivo para Impressão</label><input type="url" id="link-arquivo" placeholder="https://exemplo.com/arquivo.pdf"></div></div>
                         </div>
 
-                        <!-- Campos para "Setor de Arte" (sem alterações) -->
                         <div id="setor-arte-fields" class="hidden">
-                             <div class="form-row">
-                                <div class="form-group">
-                                    <label for="pedido-servico">Serviço</label>
-                                    <select id="pedido-servico">
-                                        <option value="" disabled selected>Selecione o tipo de serviço</option>
-                                        <option value="Arte Impressão">Arte Impressão</option>
-                                        <option value="Arte Digital">Arte Digital</option>
-                                        <option value="Edição de Vídeo">Edição de Vídeo</option>
-                                    </select>
-                                </div>
-                            </div>
+                            <div class="form-row"><div class="form-group"><label for="pedido-servico">Serviço</label><select id="pedido-servico"><option value="" disabled selected>Selecione o tipo de serviço</option><option value="Arte Impressão">Arte Impressão</option><option value="Arte Digital">Arte Digital</option><option value="Edição de Vídeo">Edição de Vídeo</option></select></div></div>
                             <div class="form-row" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
-                                <div class="form-group">
-                                    <label for="pedido-supervisao">Supervisão 
-                                        <span class="help-tooltip" title="Preencha com o número de WhatsApp que irá acompanhar o atendimento do designer.">?</span>
-                                    </label>
-                                    <input type="tel" id="pedido-supervisao" placeholder="(00) 00000-0000">
-                                </div>
-                                <div class="form-group">
-                                    <label for="valor-designer">Valor para o Designer (R$)</label>
-                                    <input type="number" id="valor-designer" step="5">
-                                    <div id="valor-designer-alerta" class="form-feedback error hidden" style="font-size: 0.8em; margin-top: 5px;">
-                                        Valores abaixo de R$ 50,00 têm maior probabilidade de serem recusados pelos Freelancers.
-                                    </div>
-                                </div>
+                                <div class="form-group"><label for="pedido-supervisao">Supervisão <span class="help-tooltip" title="Preencha com o número de WhatsApp que irá acompanhar o atendimento do designer.">?</span></label><input type="tel" id="pedido-supervisao" placeholder="(00) 00000-0000"></div>
+                                <div class="form-group"><label for="valor-designer">Valor para o Designer (R$)</label><input type="number" id="valor-designer" step="5"><div id="valor-designer-alerta" class="form-feedback error hidden" style="font-size: 0.8em; margin-top: 5px;">Valores abaixo de R$ 50,00 têm maior probabilidade de serem recusados pelos Freelancers.</div></div>
                             </div>
-                             <div class="form-row">
-                                <div class="form-group">
-                                    <label for="pedido-formato">Formato Desejado</label>
-                                    <select id="pedido-formato">
-                                        <option value="" disabled selected>Selecione um formato</option>
-                                        <option value="PDF">PDF</option>
-                                        <option value="JPG">JPG</option>
-                                        <option value="MP4">MP4</option>
-                                        <option value="CDR">CDR</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div id="cdr-versao-container" class="form-row hidden">
-                                <div class="form-group">
-                                    <label for="cdr-versao">Digite a versão do CorelDRAW</label>
-                                    <input type="text" id="cdr-versao" placeholder="Ex: 18, 20, 21, etc.">
-                                </div>
-                            </div>
+                            <div class="form-row"><div class="form-group"><label for="pedido-formato">Formato Desejado</label><select id="pedido-formato"><option value="" disabled selected>Selecione um formato</option><option value="PDF">PDF</option><option value="JPG">JPG</option><option value="MP4">MP4</option><option value="CDR">CDR</option></select></div></div>
+                            <div id="cdr-versao-container" class="form-row hidden"><div class="form-group"><label for="cdr-versao">Digite a versão do CorelDRAW</label><input type="text" id="cdr-versao" placeholder="Ex: 18, 20, 21, etc."></div></div>
                         </div>
 
-                        <!-- Materiais do Pedido (sem alterações) -->
-                        <div style="margin-top: 25px;">
-                            <h4 class="materiais-header">Materiais do Pedido</h4>
-                            <div id="materiais-container">
-                                <div class="material-item">
-                                    <label class="item-label">Item 1</label>
-                                    <div class="form-group">
-                                        <label for="material-descricao-1">Descreva o Material</label>
-                                        <input type="text" id="material-descricao-1" class="material-descricao" placeholder="Ex. Banner 60x100 3 unidades" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="material-detalhes-1">Como o cliente deseja a arte?</label>
-                                        <textarea id="material-detalhes-1" class="material-detalhes" rows="3" required></textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <button type="button" id="btn-add-material" class="btn btn-light btn-add-material">+ Adicionar Material</button>
-                        </div>
-                        
-                        <div style="margin-top: 30px;">
-                            <button type="submit" class="btn btn-primary btn-lg w-100">Criar Pedido</button>
-                        </div>
+                        <div style="margin-top: 25px;"><h4 class="materiais-header">Materiais do Pedido</h4><div id="materiais-container"><div class="material-item"><label class="item-label">Item 1</label><div class="form-group"><label for="material-descricao-1">Descreva o Material</label><input type="text" id="material-descricao-1" class="material-descricao" placeholder="Ex. Banner 60x100 3 unidades" required></div><div class="form-group"><label for="material-detalhes-1">Como o cliente deseja a arte?</label><textarea id="material-detalhes-1" class="material-detalhes" rows="3" required></textarea></div></div></div><button type="button" id="btn-add-material" class="btn btn-light btn-add-material">+ Adicionar Material</button></div>
+                        <div style="margin-top: 30px;"><button type="submit" class="btn btn-primary btn-lg w-100">Criar Pedido</button></div>
                     </form>
 
                 </div>
