--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -13,34 +13,87 @@
             border-radius: 50%; width: 18px; height: 18px; text-align: center; line-height: 16px; font-weight: bold;
         }
 
-        /* --- NOVOS ESTILOS PARA OS BOTÕES DE RÁDIO --- */
+        /* --- NOVOS ESTILOS PARA OS RADIO BUTTONS (ESTILO DA IMAGEM) --- */
         .radio-group {
             display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
+            flex-wrap: nowrap; /* Garante que fiquem sempre em uma linha */
+            gap: 15px;
             margin-top: 5px;
+            overflow-x: auto; /* Adiciona rolagem horizontal se não couber na tela */
+            padding-bottom: 10px; /* Espaço para a barra de rolagem não ficar colada */
         }
+        
         .radio-option input[type="radio"] {
-            display: none; /* Esconde o rádio padrão */
+            /* Esconde o rádio padrão de forma acessível */
+            opacity: 0;
+            position: fixed;
+            width: 0;
         }
+
         .radio-option label {
-            display: inline-block;
-            padding: 10px 18px;
-            border: 1px solid #ced4da;
-            border-radius: 6px;
-            cursor: pointer;
+            display: flex; /* Alinha o círculo customizado com o texto */
+            align-items: center;
+            background-color: #fff;
+            padding: 10px 15px;
+            border: 2px solid #e1e1e1; /* Borda padrão cinza claro */
+            border-radius: 8px;
             transition: all 0.2s ease-in-out;
-            background-color: #f8f9fa;
-            font-weight: 500;
+            cursor: pointer;
+            position: relative; /* Necessário para o círculo customizado */
+            padding-left: 40px; /* Espaço para o nosso círculo */
+            white-space: nowrap; /* Evita que o texto quebre linha */
         }
-        .radio-option input[type="radio"]:checked + label {
+
+        /* Círculo externo customizado */
+        .radio-option label::before {
+            content: '';
+            position: absolute;
+            left: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 20px;
+            height: 20px;
+            border: 2px solid #adb5bd;
+            border-radius: 50%;
+            background-color: #fff;
+            transition: border-color 0.2s;
+        }
+
+        /* Círculo interno (ponto azul) customizado - escondido por padrão */
+        .radio-option label::after {
+            content: '';
+            position: absolute;
+            left: 17px; /* 12px do container + 5px de margem */
+            top: 50%;
+            transform: translateY(-50%) scale(0); /* Começa invisível (escala 0) */
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
             background-color: var(--azul-principal);
-            color: white;
-            border-color: var(--azul-principal);
-            box-shadow: 0 2px 8px rgba(56, 169, 244, 0.3);
+            transition: transform 0.2s;
         }
+
+        /* Quando o rádio está selecionado (checked), aplicamos os estilos */
+        .radio-option input[type="radio"]:checked + label {
+            border-color: var(--azul-principal); /* Borda azul ao redor de tudo */
+            background-color: #f0f7ff; /* Fundo azul bem claro para destaque */
+            box-shadow: 0 0 0 1px var(--azul-principal);
+        }
+
+        .radio-option input[type="radio"]:checked + label::before {
+            border-color: var(--azul-principal); /* Borda do círculo externo fica azul */
+        }
+
+        .radio-option input[type="radio"]:checked + label::after {
+            transform: translateY(-50%) scale(1); /* Ponto azul aparece (escala 1) */
+        }
+
+        .radio-option input[type="radio"]:focus + label {
+             box-shadow: 0 0 0 2px rgba(56, 169, 244, 0.4); /* Efeito de foco para acessibilidade */
+        }
+
         .radio-option label:hover {
-            border-color: #adb5bd;
+            border-color: #999;
         }
         /* --- FIM DOS NOVOS ESTILOS --- */
     </style>
@@ -74,7 +127,7 @@
                             </div>
                         </div>
                         
-                        <!-- SEÇÃO "ARTE" ATUALIZADA PARA RADIO BUTTONS -->
+                        <!-- SEÇÃO "ARTE" COM RADIO BUTTONS -->
                         <div class="form-group">
                             <label>Arte</label>
                             <div class="radio-group" id="pedido-arte-container">
@@ -93,7 +146,7 @@
                             </div>
                         </div>
 
-                        <!-- SEÇÃO "TIPO DE ENTREGA" ATUALIZADA PARA RADIO BUTTONS -->
+                        <!-- SEÇÃO "TIPO DE ENTREGA" COM RADIO BUTTONS -->
                         <div class="form-group" style="margin-top: 20px;">
                             <label>Tipo de Entrega</label>
                             <div class="radio-group">
@@ -121,11 +174,9 @@
                         </div>
 
                         <!-- O restante do formulário permanece o mesmo -->
-
                         <div id="arquivo-cliente-fields" class="hidden">
                             <div class="form-row"><div class="form-group"><label for="link-arquivo">Link do Arquivo para Impressão</label><input type="url" id="link-arquivo" placeholder="https://exemplo.com/arquivo.pdf"></div></div>
                         </div>
-
                         <div id="setor-arte-fields" class="hidden">
                             <div class="form-row"><div class="form-group"><label for="pedido-servico">Serviço</label><select id="pedido-servico"><option value="" disabled selected>Selecione o tipo de serviço</option><option value="Arte Impressão">Arte Impressão</option><option value="Arte Digital">Arte Digital</option><option value="Edição de Vídeo">Edição de Vídeo</option></select></div></div>
                             <div class="form-row" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
@@ -135,7 +186,6 @@
                             <div class="form-row"><div class="form-group"><label for="pedido-formato">Formato Desejado</label><select id="pedido-formato"><option value="" disabled selected>Selecione um formato</option><option value="PDF">PDF</option><option value="JPG">JPG</option><option value="MP4">MP4</option><option value="CDR">CDR</option></select></div></div>
                             <div id="cdr-versao-container" class="form-row hidden"><div class="form-group"><label for="cdr-versao">Digite a versão do CorelDRAW</label><input type="text" id="cdr-versao" placeholder="Ex: 18, 20, 21, etc."></div></div>
                         </div>
-
                         <div style="margin-top: 25px;"><h4 class="materiais-header">Materiais do Pedido</h4><div id="materiais-container"><div class="material-item"><label class="item-label">Item 1</label><div class="form-group"><label for="material-descricao-1">Descreva o Material</label><input type="text" id="material-descricao-1" class="material-descricao" placeholder="Ex. Banner 60x100 3 unidades" required></div><div class="form-group"><label for="material-detalhes-1">Como o cliente deseja a arte?</label><textarea id="material-detalhes-1" class="material-detalhes" rows="3" required></textarea></div></div></div><button type="button" id="btn-add-material" class="btn btn-light btn-add-material">+ Adicionar Material</button></div>
                         <div style="margin-top: 30px;"><button type="submit" class="btn btn-primary btn-lg w-100">Criar Pedido</button></div>
                     </form>
