--- a/cadastro.html
+++ b/cadastro.html
@@ -321,7 +321,7 @@
             <div class="sidebar-content">
                 <img src="https://setordearte.com.br/images/logo-redonda.svg" alt="Logo Setor de Arte">
                 <h1>Bem-vindo ao<br>Setor de Arte</h1>
-                <p>A plataforma definitiva para gestão de galerias e artistas.<br>Cadastre-se gratuitamente e simplifique sua rotina hoje mesmo.</p>
+                <p>Solução definitiva para Departamento de Criação.<br>Cadastre-se gratuitamente e simplifique sua rotina hoje mesmo.</p>
             </div>
         </div>
 
