--- a/painel.html
+++ b/painel.html
@@ -9,6 +9,87 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- ESTILOS CRÍTICOS PARA AS FUNÇÕES DE PAGAMENTO E MODAL -->
+    <style>
+        /* Estilo para garantir que o Modal de Créditos apareça */
+        .modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.5);
+            z-index: 10000;
+            align-items: center; justify-content: center;
+        }
+        .modal-overlay.active {
+            display: flex !important;
+        }
+        .modal-content {
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 400px;
+            position: relative;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+        .close-modal {
+            position: absolute;
+            top: 10px; right: 15px;
+            background: none; border: none;
+            font-size: 24px; cursor: pointer;
+        }
+        
+        /* Estilos para o Menu Dropdown (Botão Pagar) */
+        .dropdown-pagamento {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-pagamento .btn-pagar {
+            background-color: #2563eb;
+            color: white;
+            padding: 6px 12px;
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .dropdown-pagamento .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #fff;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 50; /* Garante que fique acima de outros elementos */
+            border-radius: 4px;
+            right: 0;
+            top: 100%;
+            margin-top: 5px;
+            border: 1px solid #e2e8f0;
+        }
+        .dropdown-pagamento.active .dropdown-content {
+            display: block;
+        }
+        .dropdown-pagamento .dropdown-content button {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            width: 100%;
+            text-align: left;
+            border: none;
+            background: none;
+            cursor: pointer;
+            border-bottom: 1px solid #f1f5f9;
+        }
+        .dropdown-pagamento .dropdown-content button:hover {
+            background-color: #f1f5f9;
+            color: #2563eb;
+        }
+    </style>
 </head>
 <body>
 
@@ -36,8 +117,9 @@
                             <span id="saldo-valor" class="saldo-valor">R$ 0,00</span>
                         </div>
                         <div class="acoes-box">
+                            <!-- Botão que abre o modal -->
                             <button class="btn-acao btn-add-credito">Adicionar Créditos</button>
-                            <!-- MODIFICAÇÃO AQUI: O botão agora é um link -->
+                            <!-- Link para novo pedido -->
                             <a href="/criar-pedido-grafica.html" class="btn-acao"><strong>+</strong> Novo Pedido</a>
                         </div>
                     </section>
@@ -105,9 +187,8 @@
 
         </div>
     </div>
-
-    <!-- REMOVIDO: O modal 'modal-novo-pedido' foi completamente removido daqui. -->
     
+    <!-- MODAL DE ADICIONAR CRÉDITOS -->
     <div class="modal-overlay" id="modal-adquirir-creditos">
         <div class="modal-content">
             <div class="modal-header">
@@ -120,7 +201,7 @@
                     <div id="creditos-form-error" class="form-feedback error hidden"></div>
                     <div class="form-group">
                         <label for="creditos-valor">Valor (R$)</label>
-                        <input type="number" id="creditos-valor" min="5" step="5" required>
+                        <input type="number" id="creditos-valor" min="5" step="5" placeholder="Ex: 50.00" required>
                     </div>
                 </div>
                 <div class="modal-footer">
