--- a/cadastro.html
+++ b/cadastro.html
@@ -354,6 +354,15 @@
                         <input type="tel" id="telefone_empresa" placeholder="(xx) xxxxx-xxxx" required>
                     </div>
 
+                    <!-- Campo de Upload de Logo -->
+                    <div class="form-group full-width" style="margin-top: 10px;">
+                        <label for="logo_arquivo">Logo da Empresa</label>
+                        <input type="file" id="logo_arquivo" accept="image/png, image/jpeg, image/jpg" style="padding: 10px; background-color: #f8fafc;">
+                        <p style="font-size: 0.75rem; color: #64748b; margin-top: 5px;">
+                            Formatos: PNG ou JPG. Usaremos para personalizar seu painel.
+                        </p>
+                    </div>
+
                     <!-- Dados de Acesso -->
                     <h3 class="full-width">Seu Acesso</h3>
                     
