--- a/meus-dados.html
+++ b/meus-dados.html
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="logo-upload-info">
                                     <h4>Logo da Empresa</h4>
-                                    <p>Esta imagem aparecerá no topo do seu menu lateral.</p>
+                                    <p>Esta imagem aparecerá nos Grupos de WhatsApp que o Sistema criar.</p>
                                     <input type="file" id="new-logo-file" accept="image/*">
                                 </div>
                             </div>
