--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -92,6 +92,15 @@
         .radio-option input[type="radio"]:checked + label { border-color: var(--azul-principal); background-color: #f0f7ff; box-shadow: 0 0 0 1px var(--azul-principal); }
         .radio-option input[type="radio"]:checked + label::before { border-color: var(--azul-principal); }
         .radio-option input[type="radio"]:checked + label::after { transform: translateY(-50%) scale(1); }
+
+        /* --- ESTILO PARA A MINI LOGO DENTRO DO RADIO --- */
+        .radio-mini-logo {
+            width: 24px;
+            height: 24px;
+            margin-right: 8px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
@@ -131,7 +140,29 @@
                                 <div class="form-group"><label for="cliente-final-nome">Nome do Cliente Final</label><input type="text" id="cliente-final-nome" required></div>
                                 <div class="form-group"><label for="cliente-final-wpp">WhatsApp do Cliente Final</label><input type="tel" id="cliente-final-wpp" required placeholder="(00) 00000-0000"></div>
                             </div>
-                            <div class="form-group"><label>Arte</label><div class="radio-group" id="pedido-arte-container"><div class="radio-option"><input type="radio" id="arte-arquivo" name="pedido-arte" value="Arquivo do Cliente" required><label for="arte-arquivo">Arquivo do Cliente</label></div><div class="radio-option"><input type="radio" id="arte-setor" name="pedido-arte" value="Setor de Arte"><label for="arte-setor">Setor de Arte</label></div><div class="radio-option"><input type="radio" id="arte-proprio" name="pedido-arte" value="Designer Próprio"><label for="arte-proprio">Designer Próprio</label></div></div></div>
+                            
+                            <!-- SEÇÃO DE ARTE COM A LOGO ADICIONADA -->
+                            <div class="form-group">
+                                <label>Arte</label>
+                                <div class="radio-group" id="pedido-arte-container">
+                                    <div class="radio-option">
+                                        <input type="radio" id="arte-arquivo" name="pedido-arte" value="Arquivo do Cliente" required>
+                                        <label for="arte-arquivo">Arquivo do Cliente</label>
+                                    </div>
+                                    <div class="radio-option">
+                                        <input type="radio" id="arte-setor" name="pedido-arte" value="Setor de Arte">
+                                        <label for="arte-setor">
+                                            <img src="/images/logo-redonda.svg" alt="Logo Setor" class="radio-mini-logo">
+                                            Setor de Arte
+                                        </label>
+                                    </div>
+                                    <div class="radio-option">
+                                        <input type="radio" id="arte-proprio" name="pedido-arte" value="Designer Próprio">
+                                        <label for="arte-proprio">Designer Próprio</label>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="form-group" style="margin-top: 20px;"><label>Tipo de Entrega</label><div class="radio-group"><div class="radio-option"><input type="radio" id="entrega-balcao" name="tipo-entrega" value="RETIRADA NO BALCÃO" required><label for="entrega-balcao">Retirada no Balcão</label></div><div class="radio-option"><input type="radio" id="entrega-loja" name="tipo-entrega" value="INSTALAÇÃO NA LOJA"><label for="entrega-loja">Instalação na Loja</label></div><div class="radio-option"><input type="radio" id="entrega-externa" name="tipo-entrega" value="INSTALAÇÃO EXTERNA"><label for="entrega-externa">Instalação Externa</label></div><div class="radio-option"><input type="radio" id="entrega-digital" name="tipo-entrega" value="DIGITAL"><label for="entrega-digital">Digital</label></div><div class="radio-option"><input type="radio" id="entrega-envio" name="tipo-entrega" value="ENVIO"><label for="entrega-envio">Envio</label></div></div></div>
                             <div id="arquivo-cliente-fields" class="hidden"><div class="form-row"><div class="form-group"><label for="link-arquivo">Link do Arquivo para Impressão</label><input type="url" id="link-arquivo" placeholder="https://exemplo.com/arquivo.pdf"></div></div></div>
                             <div id="setor-arte-fields" class="hidden"><div class="form-row" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));"><div class="form-group"><label for="pedido-supervisao">Supervisão</label><input type="tel" id="pedido-supervisao" placeholder="(00) 00000-0000"></div><div class="form-group"><label for="valor-designer">Valor para o Designer (R$)</label><input type="number" id="valor-designer" step="5"><div id="valor-designer-alerta" class="form-feedback error hidden" style="font-size: 0.8em; margin-top: 5px;">Valores abaixo de R$ 50,00 têm maior probabilidade de serem recusados pelos Freelancers.</div></div></div><div class="form-row"><div class="form-group"><label for="pedido-formato">Formato Desejado</label><select id="pedido-formato"><option value="" disabled selected>Selecione um formato</option><option value="PDF">PDF</option><option value="JPG">JPG</option><option value="MP4">MP4</option><option value="CDR">CDR</option></select></div></div><div id="cdr-versao-container" class="form-row hidden"><div class="form-group"><label for="cdr-versao">Digite a versão do CorelDRAW</label><input type="text" id="cdr-versao" placeholder="Ex: 18, 20, 21, etc."></div></div></div>
