--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -152,7 +152,7 @@
                                     <div class="radio-option">
                                         <input type="radio" id="arte-setor" name="pedido-arte" value="Setor de Arte">
                                         <label for="arte-setor">
-                                            <img src="/images/logo-redonda.svg" alt="Logo Setor" class="radio-mini-logo">
+                                            <img src="/images/logo-fundo-claro-100x100.png" alt="Logo Setor" class="radio-mini-logo">
                                             Setor de Arte
                                         </label>
                                     </div>
