--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -153,7 +153,7 @@
                                         <input type="radio" id="arte-setor" name="pedido-arte" value="Setor de Arte">
                                         <label for="arte-setor">
                                             <img src="/images/logo-fundo-claro-100x100.png" alt="Logo Setor" class="radio-mini-logo">
-                                            Setor de Arte
+                                            Freelancer
                                         </label>
                                     </div>
                                     <div class="radio-option">
