--- a/criar-pedido-grafica.html
+++ b/criar-pedido-grafica.html
@@ -120,7 +120,7 @@
                                         <input type="radio" id="arte-setor" name="pedido-arte" value="Setor de Arte">
                                         <label for="arte-setor">
                                             <img src="/images/logo-redonda.svg" alt="Logo Setor" class="radio-mini-logo">
-                                            Setor de Arte
+                                            Freelancer
                                         </label>
                                     </div>
                                     <div class="radio-option"><input type="radio" id="arte-proprio" name="pedido-arte" value="Designer Próprio"><label for="arte-proprio">Designer Próprio</label></div>
